--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,13 @@
 * {
     box-sizing: border-box;
+    font-family: 'Fredoka', 'Roboto', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;;
 }
 
 body {
     margin: 0;
-    background-image: url("./img/ian-dooley-DuBNA1QMpPA-unsplash-large.jpg");
+    background-image: url("./img/ian-dooley-DuBNA1QMpPA-unsplash-largemodified.jpg");
     background-attachment: fixed;
+    background-size: cover;
 }
 
 .para-author {
@@ -46,7 +48,7 @@ header {
     background-color: rgba(0,0,0,.6);
     height: fit-content;
     padding: 20px;
-    margin-top: 100px;
+    margin-top: 75px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -66,6 +68,31 @@ header {
 .travel {
     font-family: 'Fredoka', 'Roboto', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 2.5rem;
+    font-weight: 700;
+}
+
+main {
+    display: flex;
+    justify-content: center;
+    margin-top: 75px;
+}
+
+.form-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: rgba(255, 255, 255, .85);
+    padding: 10px;
+    border-radius: 10px;
+
+}
+
+li {
+    list-style-type: none;
+}
+
+ul {
+    column-count: 2;
 }
 
 
