--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,13 @@
 * {
     box-sizing: border-box;
-    font-family: 'Fredoka', 'Roboto', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;;
+    font-family: 'Fredoka', 'Roboto', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin: 0;
 }
 
 body {
-    margin: 0;
     background-image: url("./img/ian-dooley-DuBNA1QMpPA-unsplash-largemodified.jpg");
     background-attachment: fixed;
     background-size: cover;
-    overflow: scroll;
 }
 
 .para-author {
@@ -36,21 +35,21 @@ body {
 
 p {
     margin: 0;
-   
+}
+
+a {
+    text-decoration: none;
 }
 
 sup {
     font-size: 1.5rem;
 }
 
-
-
-
 header {
     background-color: rgba(0,0,0,.6);
     height: fit-content;
     padding: 20px;
-    margin-top: 75px;
+    margin: 75px 0 0 0;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -78,7 +77,8 @@ header {
 main {
     display: flex;
     justify-content: center;
-    margin-top: 75px;
+    margin: 75px 0 0 0;
+    padding: 0 20px;
 }
 
 .form-container {
@@ -86,10 +86,33 @@ main {
     flex-direction: column;
     align-items: center;
     background-color: rgba(255, 255, 255, .85);
-    padding: 30px;
+    padding: 15px;
     border-radius: 5px;
-    min-width: 310px;
+    min-width: 350px;
     max-width: 720px;
+}
+
+h1 {
+    margin: 0 0 20px 0;
+}
+
+.asterisk {
+    font-family: 'Playfair Display', 'Fredoka', 'Roboto', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 1.25rem;
+    font-weight: 700;
+    background: linear-gradient(90deg,
+     rgba(214,123,3,1) 10%,
+      rgba(214,141,3,1) 20%,
+       rgba(249,235,22,1) 30%,
+        rgba(109,161,65,1) 40%,
+         rgba(56,196,152,1) 50%,
+          rgba(30,84,190,1) 60%,
+           rgba(149,28,204,1) 70%,
+            rgba(201,37,137,1) 80%,
+             rgba(219,13,83,1) 90%,
+              rgba(255,0,0,1) 100%);
+              -webkit-background-clip: text;
+              -webkit-text-fill-color: transparent;
 }
 
 li {
@@ -99,43 +122,79 @@ li {
 }
 
 ul {
-    column-gap: 48px;
+    column-gap: 30px;
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
+    padding: 0;
     
 }
 
 input {
     appearance: none;
-    padding: 5px 5px;
-    min-width: 250px;
-    font-size: .75rem;
-    margin-bottom: 10px;
+    padding: 5px 10px;
+    min-width: 300px;
+    font-size: .9rem;
+    margin-bottom: 0px;
     border-radius: 5px;
-    border: 1px solid rgb(228, 233, 224)
+    border: 2px solid rgb(228, 233, 224)
 }
 
 input, label {
     display: block;
 }
 
-label {
-    margin-left: 2px;;
+input:disabled {
+    background-color: rgba(200, 200, 200, .4);
+}
+
+input:focus {
+    outline: none;
+    border-color:rgb(47, 215, 215)
+}
+
+input:valid {
+    border-color: rgba(109, 161, 65, 1)
+}
+
+label, .error-help {
+    margin-left: 2px;
+}
+
+.error-help {
+    color: red;
+    font-weight: 100;
+    height: 15px;
 }
 
 .create-account {
     appearance: none;
-    margin: 0 0 10px 40px;
+    border: none;
+    border-color: none;
     padding: 8px 30px;
+    margin: 20px 0;
     border-radius: 5px;
+    box-shadow: 0 0 3px 1px rgb(5, 146, 175);
     background-color: rgb(5, 146, 175);
     color: rgba(255, 255, 255, 1);
     font-weight: 700;
+    cursor: pointer;
 }
 
-.existing-user {
-    text-align: left;
-    margin: 0 0 0 40px;
+.create-account:hover {
+    opacity: .8;
+}
+
+.create-account:active {
+    transform: scale(.97);
+}
+
+.log-in {
+    font-weight: 700;
+}
+
+.log-in:hover {
+    text-decoration: underline;
 }
 
 
