Finetune dimensions and style footer

--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,9 @@ body {
     background-image: url("./img/ian-dooley-DuBNA1QMpPA-unsplash-largemodified.jpg");
     background-attachment: fixed;
     background-size: cover;
+    height: 100dvh;
+    display: flex;
+    flex-direction: column;
 }
 
 .para-author {
@@ -48,6 +51,7 @@ sup {
 header {
     background-color: rgba(0,0,0,.6);
     height: fit-content;
+    width: 100vw;
     padding: 20px;
     margin: 75px 0 0 0;
     display: flex;
@@ -57,13 +61,13 @@ header {
 }
 
 .logo {
-    width: 150px;
-    height: 150px;
+    width: max(75px, 150px) ;
+    height: max(75px, 150px);
 }
 
 .freedom {
     font-family: 'Fredoka One', 'Roboto', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 3rem;
+    font-size: clamp(2rem, 3rem, 4rem);
     color: rgba(255, 255, 255, 1)
 }
 
@@ -94,6 +98,11 @@ main {
 
 h1 {
     margin: 0 0 20px 0;
+}
+
+.mandatory {
+    margin: 0 auto 10px 0;
+
 }
 
 .asterisk {
@@ -170,9 +179,10 @@ label, .error-help {
 .create-account {
     appearance: none;
     border: none;
+    width: 180px;
     border-color: none;
     padding: 8px 30px;
-    margin: 20px 0;
+    margin: 20px 100px;
     border-radius: 5px;
     box-shadow: 0 0 3px 1px rgb(5, 146, 175);
     background-color: rgb(5, 146, 175);
@@ -193,28 +203,20 @@ label, .error-help {
     font-weight: 700;
 }
 
-.log-in:hover {
+a:hover {
     text-decoration: underline;
 }
 
+footer {
+    text-align: center;
+    color: rgba(0, 0, 0, 1);
+    margin-top: auto;
+    padding: 10px;
+    font-size: .8rem;
+}
 
-
-
-
-
-
-
-
-
-/*
-content: "✔ " 
-or content: "\2713"
-
-content: "\00D7" for multiplication symbol
-*/
-
-/*
-Icon grey color: #f5f5f5
-*/
+footer ~ a:link {
+    color: rgba(255, 255, 255, .85)
+}
 
 
